@@ -8,6 +8,7 @@ either one "#" sign or two for now; two is preferred going forward, i.e.
 - new multiline comment form: "<%doc> a comment </%doc>"
 - UNDEFINED evaluates to False
 - improvement to scoping of "caller" variable when using <%call> tag
+- added lexer error for unclosed control-line (%) line
 
 0.1.2
 - fix to parsing of code/expression blocks to insure that non-ascii
